@@ -16,7 +16,9 @@ export(AddAxis,
        ChoosePch,
        CutoutPolygon,
        Data,
+       EditData,
        EditFunction,
+       EditText,
        EvalFunction,
        ExportData,
        Format,
@@ -40,6 +42,4 @@ export(AddAxis,
        SetConfiguration,
        SetPolygonLimits,
        SetPreferences,
-       SummarizeVariable,
-       ViewData,
-       ViewText)
+       SummarizeVariable)
