@@ -58,7 +58,7 @@ BuildHistogram <- function(d, var.names=NULL, var.default=1L, parent=NULL) {
         obj[[i]][is.na(obj[[i]])] <- ""
       }
       obj <- as.data.frame(do.call(cbind, obj))
-      ViewData(obj, col.names=names(obj), read.only=TRUE,
+      EditData(obj, col.names=names(obj), read.only=TRUE,
                win.title="Histogram Data", parent=tt)
     }
   }
