@@ -1,5 +1,7 @@
 Changes in Version 0.7-5
 
+  o  Function name changes: ViewText to EditText, and ViewData to EditData.
+
   o  Calendar date and time variables are accurately converted to character
      strings using the POSIXct2Character function.
 
@@ -8,7 +10,7 @@ Changes in Version 0.7-5
   o  Added ability to edit raw data in a spreadsheet. Final edits are saved in
      a changelog.
 
-  o  Added GUI for importing data from a package. R data sets may also be
+  o  Added GUI for importing data from an R package. R data sets may also be
      imported from a file.
 
   o  RSurvey project files are specified using the .RData file extension. The
